--- a/SRC/Makefile
+++ b/SRC/Makefile
@@ -6,7 +6,7 @@
 #    By: rchavez@student.42heilbronn.de <rchavez    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/09/07 09:10:41 by rchavez@stu       #+#    #+#              #
-#    Updated: 2024/09/07 09:37:10 by rchavez@stu      ###   ########.fr        #
+#    Updated: 2024/09/07 16:59:39 by rchavez@stu      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -14,7 +14,8 @@ NAME = Calculate
 
 SRC = ft_malloc/ft_malloc.c ft_malloc/ft_malloc_bad.c ft_malloc/globals.c\
 	ft_malloc/list.c get_next_line/get_next_line.c\
-	get_next_line/get_next_line_utils.c main.c extract.c emp_t.c
+	get_next_line/get_next_line_utils.c main.c extract.c emp_t.c\
+	dbprint.c
 
 OBJ = $(SRC:%.c=%.o)
 
